@@ -1,6 +1,8 @@
 - Added Beach Villager Type (module)
 - Magnets not have shiny new particles
 - Iron Golems and Minecarts can be pushed by magnets
+- Manetic falling blocks and item entities can also be pushed
+- Player having some iron armor are also pushable
 - Magnets can now push and pull blocks through breakable blocks (like tall grass)
 - Improved trowel item logic, now works with more complex block items
 - Improved ITroweable interface and also added a blacklist and whitelist tag for it
